--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -32,6 +32,7 @@ $btn-text-color: #fff;
 $primary-link-color: #1c1b1b;
 
 // breakpoints
+$small-laptop: 1030px;
 $tablet: 992px;
 $small-tablet: 890px;
 $portreit-tablet: 730px;
