--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,6 @@
 @import "./components/nav";
 @import "./components/header-services";
 @import "./components/hero";
+@import "./components/about";
+@import "./components/best-sellers";
+@import "./components/best-sellers-card";
