--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -1,5 +1,11 @@
 /* stylelint-disable */
 
+@mixin small-laptop {
+  @media (max-width: $small-laptop) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (max-width: $tablet) {
     @content;
