сделаны секции guide + адаптив

--- a/src/partials/best-sellers.html
+++ b/src/partials/best-sellers.html
@@ -1,6 +1,6 @@
 <section class="best-sellers">
     <div class="container best-sellers__container">
-        <h2 class="section-title best-sellers__title">Our best sellers</h2>
+        <h2 class="section-title section-title--center best-sellers__title">Our best sellers</h2>
         <ul class="best-sellers__list">
             <li class="best-sellers__item sellers-card">
                 <img src="../img/sellers-img-1.png" alt="French culture card" class="sellers-card__img sellers-card__img--short">
