--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,8 +7,8 @@ $container-width: $content-width + ($container-offset * 2);
 
 // background colors
 $primary-bg-color: #f0efeb;
-$secondary-bg-color: rgba(204, 204, 204, 0.6);
-$secondary-bg-color: #f0f0f0;
+$secondary-bg-color: rgba(204, 204, 204, 0.3);
+$third-bg-color: rgba(204, 204, 204, 0.6);
 // footer-background color
 $footer-bg-color: #020202;
 // button background color
