--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,7 @@
 @import "./components/about";
 @import "./components/best-sellers";
 @import "./components/best-sellers-card";
+@import "./components/guide-common";
+@import "./components/guide-society";
+@import "./components/guide-culture";
+@import "./components/guide-politics";
