--- a/app/css/main.css
+++ b/app/css/main.css
@@ -218,11 +218,16 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
   font-weight: 700;
   font-size: 3.6rem;
   line-height: 4.2rem;
-  text-align: center;
   color: black;
 }
 .section-title--center {
   text-align: center;
+}
+.section-title--left {
+  text-align: left;
+}
+.section-title--right {
+  text-align: right;
 }
 
 .btn {
@@ -600,5 +605,139 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
 .sellers-card__img--short {
   width: 309px;
   height: 422px;
+}
+
+.guide__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 76px;
+  padding-bottom: 51px;
+}
+@media (max-width: 890px) {
+  .guide__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+.guide__container--flex-reverse {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+@media (max-width: 890px) {
+  .guide__container--flex-reverse {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+    -ms-flex-direction: column !important;
+    flex-direction: column !important;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+.guide__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding-top: 70px;
+  padding-left: 50px;
+}
+@media (max-width: 890px) {
+  .guide__content {
+    padding-left: 24px;
+    text-align: center;
+  }
+}
+.guide__content--align-right {
+  text-align: right;
+  padding-left: 0 !important;
+  padding-right: 30px;
+}
+@media (max-width: 890px) {
+  .guide__content--align-right {
+    padding-right: 0 !important;
+    text-align: center;
+  }
+}
+.guide__content--padding-top {
+  padding-top: 94px !important;
+}
+@media (max-width: 890px) {
+  .guide__content--padding-top {
+    padding-top: 70px !important;
+  }
+}
+.guide__title {
+  margin-bottom: 31px;
+}
+.guide__descr {
+  font-weight: 400;
+  font-size: 3.6rem;
+  line-height: 4.2rem;
+  color: #000000;
+  max-width: 500px;
+  margin-bottom: 40px;
+}
+.guide__descr--margin-small {
+  margin-bottom: 30px !important;
+}
+.guide__descr--wide {
+  max-width: 525px;
+}
+@media (max-width: 890px) {
+  .guide__descr {
+    font-size: 2.8rem;
+    line-height: 3.8rem;
+  }
+}
+.guide__link {
+  text-align: left;
+}
+@media (max-width: 890px) {
+  .guide__link {
+    text-align: center;
+  }
+}
+.guide__link--align-right {
+  text-align: right;
+}
+@media (max-width: 890px) {
+  .guide__link--align-right {
+    text-align: center;
+  }
+}
+.guide__img {
+  padding-left: 23px;
+  width: 408px;
+  height: 525px;
+}
+@media (max-width: 890px) {
+  .guide__img {
+    padding-left: 0 !important;
+    width: 385px;
+  }
+}
+
+.society-guide {
+  background-color: rgba(204, 204, 204, 0.3);
+}
+
+.culture-guide {
+  background-color: rgba(204, 204, 204, 0.6);
+}
+
+.politics-guide {
+  background-color: rgba(204, 204, 204, 0.3);
 }
 /*# sourceMappingURL=main.css.map */
