исправлено отображение изображений на экранах до 570px

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -268,6 +268,7 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
   color: #000000;
   background: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .nav__list {
@@ -602,9 +603,21 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
   width: 314px;
   height: 429px;
 }
+@media (max-width: 570px) {
+  .sellers-card__img {
+    width: 100%;
+    height: auto;
+  }
+}
 .sellers-card__img--short {
   width: 309px;
   height: 422px;
+}
+@media (max-width: 570px) {
+  .sellers-card__img--short {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .guide__container {
@@ -612,7 +625,7 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
   display: -ms-flexbox;
   display: flex;
   padding-top: 76px;
-  padding-bottom: 51px;
+  padding-bottom: 52px;
 }
 @media (max-width: 890px) {
   .guide__container {
@@ -656,6 +669,7 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
 @media (max-width: 890px) {
   .guide__content {
     padding-left: 24px;
+    padding-left: 0;
     text-align: center;
   }
 }
@@ -671,7 +685,7 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
   }
 }
 .guide__content--padding-top {
-  padding-top: 94px !important;
+  padding-top: 92px !important;
 }
 @media (max-width: 890px) {
   .guide__content--padding-top {
@@ -720,12 +734,10 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
 .guide__img {
   padding-left: 23px;
   width: 408px;
-  height: 525px;
 }
 @media (max-width: 890px) {
   .guide__img {
     padding-left: 0 !important;
-    width: 385px;
   }
 }
 
