--- a/src/partials/best-sellers.html
+++ b/src/partials/best-sellers.html
@@ -19,7 +19,7 @@
                 </div>
             </li>
             <li class="best-sellers__item sellers-card">
-                <img src="../img/sellers-woman-2.png" alt="German culture card" class="sellers-card__img">
+                <img src="../img/german-culture-woman.png" alt="German culture card" class="sellers-card__img">
                 <div class="sellers-card__content">
                     <h3 class="sellers-card__title">Thalby Guide to German Culture and Heritage</h3>
                     <span class="sellers-card__price">USD 6.99</span>
