--- a/src/partials/culture-guide.html
+++ b/src/partials/culture-guide.html
@@ -1,7 +1,7 @@
 <section class="culture-guide guide">
     <div class="container">
         <div class="guide__container guide__container--flex-reverse">
-            <img src="../img/guide-culture-poster.png" alt="Culture guide poster" class="guide__img">
+            <img src="../img/guide-culture.png" alt="Culture guide poster" class="guide__img">
             <div class="guide__content guide__content--align-right guide__content--padding-top">
             <h2 class="section-title guide__title">Culture and Heritage</h2>    
             <p class="guide__descr guide__descr--margin-small">As well as covering heritage and tradition, our guides to culture introduce you to the designers, artists and chefs creating at the forefront of today's culture.</p>
