--- a/src/partials/politics-guide.html
+++ b/src/partials/politics-guide.html
@@ -1,6 +1,6 @@
 <section class="politics-guide guide">
     <div class="container">
-        <div class="guide__container">
+        <div class="guide__container guide__container--padding">
             <img src="../img/power-img.png" alt="Politics guide poster" class="guide__img">
             <div class="guide__content guide__content--padding-top">
             <h2 class="section-title guide__title">Power and Politics</h2>    
