--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,3 +18,4 @@
 @import "./components/guide-society";
 @import "./components/guide-culture";
 @import "./components/guide-politics";
+@import "./components/features";
