--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -9,6 +9,7 @@ $container-width: $content-width + ($container-offset * 2);
 $primary-bg-color: #f0efeb;
 $secondary-bg-color: rgba(204, 204, 204, 0.3);
 $third-bg-color: rgba(204, 204, 204, 0.6);
+$fourth-bg-color: #f0f0f0;
 // footer-background color
 $footer-bg-color: #020202;
 // button background color
