--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,4 @@
 @import "./components/guide-culture";
 @import "./components/guide-politics";
 @import "./components/features";
+@import "./components/celebrities";
