--- a/src/scss/components/_celebrities.scss
+++ b/src/scss/components/_celebrities.scss
@@ -7,7 +7,7 @@
     height: 480px;
     z-index: 60;
     position: relative;
-    z-index: -1;
+    z-index: -10;
     top: -428px;
   }
 
@@ -20,12 +20,21 @@
 
   &__list {
     @include flex-v-sb;
+    @include small-tablet {
+      flex-flow: row wrap;
+      justify-content: center;
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include small-tablet {
+      &:not(:last-child) {
+        margin-bottom: 45px;
+      }
+    }
   }
 
   &-card {
