--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -25,6 +25,8 @@ $footer-item-color: #fff;
 $hero-title-color: black;
 $title-color-primary: black;
 $subtitle-color-primary: black;
+//contacts form placeholder
+$placeholder-color: #a0a0a0;
 
 // button text color
 $btn-text-color: #fff;
@@ -37,4 +39,5 @@ $small-laptop: 1030px;
 $tablet: 992px;
 $small-tablet: 890px;
 $portreit-tablet: 730px;
+$small-portreit-tablet: 651px;
 $landscape-mobile: 570px;
