--- a/src/scss/components/_celebrities.scss
+++ b/src/scss/components/_celebrities.scss
@@ -1,4 +1,5 @@
 .celebrities {
+  position: relative;
   &::after {
     content: "";
     display: block;
@@ -6,12 +7,19 @@
     width: 100%;
     height: 480px;
     z-index: 60;
-    position: relative;
+    position: absolute;
     z-index: -10;
-    top: -428px;
+    top: 373px;
+
+    @include small-tablet {
+      top: 1056px;
+    }
+    @include small-portreit-tablet {
+      top: 1740px;
+    }
   }
 
-  padding-bottom: 51.17px;
+  // padding-bottom: 51.17px;
   &__title {
     max-width: 705px;
     margin: 0 auto 102.33px auto;
