--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,3 +20,4 @@
 @import "./components/guide-politics";
 @import "./components/features";
 @import "./components/celebrities";
+@import "./components/contacts";
