добавлен подвал + адаптив

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -12,6 +12,8 @@ $third-bg-color: rgba(204, 204, 204, 0.6);
 $fourth-bg-color: #f0f0f0;
 // footer-background color
 $footer-bg-color: #020202;
+// copyright-background-color
+$copyright-bg-color: #020202;
 // button background color
 $btn-bg-color: #000;
 
@@ -20,6 +22,7 @@ $nav-item-color: #1c1b1b;
 
 // footer colors
 $footer-item-color: #fff;
+$copyright-item-color: #fff;
 
 // titles colors
 $hero-title-color: black;
