--- a/app/css/main.css
+++ b/app/css/main.css
@@ -983,7 +983,7 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
 .contacts {
   padding-top: 131px;
   padding-left: 25px;
-  padding-bottom: 87.83px;
+  padding-bottom: 84.83px;
 }
 .contacts__title {
   margin: 0 auto 9px auto;
@@ -1093,5 +1093,115 @@ input::-webkit-search-decoration, input::-webkit-search-cancel-button, input::-w
     -ms-grid-column-span: 2;
     grid-column: 1/3;
   }
+}
+
+.footer {
+  padding-top: 50.83px;
+  background-color: #020202;
+}
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+@media (max-width: 570px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
+.footer__img {
+  margin-bottom: 37px;
+}
+@media (max-width: 570px) {
+  .footer__img {
+    margin-bottom: 14px;
+  }
+}
+.footer__contacts {
+  padding-right: 31px;
+}
+@media (max-width: 570px) {
+  .footer__contacts {
+    padding-right: 0;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+.footer__about {
+  margin-left: auto;
+  padding-right: 78px;
+}
+@media (max-width: 570px) {
+  .footer__about {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 0;
+    text-align: center;
+  }
+}
+
+.footer-social__item {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  margin-right: 17px;
+}
+
+.footer-about__item:not(:last-child) {
+  margin-bottom: 12px;
+}
+@media (max-width: 570px) {
+  .footer-about__item:last-child {
+    margin-bottom: 18px;
+  }
+}
+.footer-about__item:first-child {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  line-height: 2.3rem;
+  margin-bottom: 35.83px;
+  color: #fff;
+}
+.footer-about__link {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  color: #fff;
+  text-transform: none;
+}
+
+.footer-contacts__item:not(:last-child) {
+  margin-bottom: 12px;
+}
+.footer-contacts__item:first-child {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  line-height: 2.3rem;
+  margin-bottom: 35.83px;
+  color: #fff;
+}
+.footer-contacts__link {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  color: #fff;
+  text-transform: none;
+}
+
+.copyright {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.3rem;
+  text-align: center;
+  color: #fff;
+  padding: 21px 0 16px 4px;
+  margin: 0 auto;
+  background-color: #020202;
 }
 /*# sourceMappingURL=main.css.map */
