--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,3 +21,5 @@
 @import "./components/features";
 @import "./components/celebrities";
 @import "./components/contacts";
+@import "./components/footer";
+@import "./components/copyright";
